# codex

./: .env  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
javascript/: README.md
python/: pyproject.toml
python/src/crud_gen/: README.md
python/src/csv_validator/: README.md  benchmark.ipynb  client.py  server.py  validator.py
python/src/events/: base.py  local.py  redis.py
python/src/events/examples/: simple_example.py
python/src/uow/: README.md  base.py  databases.py
python/src/uow/examples/: simple_example.py
python/test/: test_local_broker.py
python/test/csv_validator/: test_validator.py
src/background_tasks/: README.md  background_tasks.py
src/csv_validator/: README.md  _profile.py  benchmark.ipynb  validator.py
src/events/: README.md  local.py
src/unit_of_work/: unit_of_work.py
src/uow/: base.py  databases.py
src/uow/examples/: simple_example.py
test/: conftest.py  test_local_subscriber.py  test_uow.py
test/csv_validator/: test_iter_validator.py
