[project]
name = "ddd-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "databases[asyncpg]>=0.9.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
pythonpath = ["src", "test"]
testpaths = ["test"]


[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "Q"]
ignore = []
